src/test/resources/Parser/SyntaxErrors/OverridesWithLessVisibility.front
class A {
    export void a() {}
}

class B : A {
    void a() override {}
}